--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
   "name": "cerca-sp-website",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Sitio web de CERCASP",
   "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start"
-}
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "lucide-react": "^0.525.0",
-    "next": "^15.4.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "lucide-react": "^0.418.0"
   }
 }
